--- a/Contacto.html
+++ b/Contacto.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/estilo.css" />
+  <meta name="author" content="Jelver Beltran" />
   <title>Contacto</title>
 </head>
 
 <body>
   <div class="contenido">
-        <div class="container-fluid" id="menu-principal">
+        <div class="container-fluid">
             <nav id="menu-container">
                 <!-- El menú se cargará aquí desde menu.html -->
             </nav>
