--- a/objetivo.html
+++ b/objetivo.html
@@ -10,37 +10,28 @@
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/estilo.css" />
-    <title>objetivo</title>
+    <meta name="author" content="Jelver Beltran" />
+    <title>Perfil</title>
 </head>
 
 <body>
-    <div class="contenido">
-        <di class="container-fluid" id="menu-principal">
-            <nav id="menu-container"">
+    <header>
+        <nav id="menu-container">
+            <!-- El menú se cargará aquí desde menu.html -->
+        </nav>
+    </header>
+    <main  class="container-fluid contenido">
+        <h1>Desarrollador Software</h1>
+        <p>
+            Tecnólogo en análisis y desarrollo de software con sólida formación técnica en redes de computadores y
+            experiencia en desarrollo Full Stack. Mi objetivo es integrarme a un equipo de desarrollo donde pueda
+            aportar mis conocimientos en programación, automatización de procesos y metodologías ágiles, contribuyendo a
+            soluciones eficientes y escalables que generen valor a la organización.
+        </p>
+    </main>
+    <footer id="footer-container"></footer>
+    <!--El footer se cargara aqui-->
 
-            </nav>
-        </div>
-
-    </div>
-    <div class=" container-fluid">
-                <h1>Objetivo Profesional</h1>
-                <p>
-                    Mi objetivo es ofrecer soluciones tecnológicas integrales que impulsen la eficiencia y productividad
-                    de
-                    mis clientes. Con una combinación de habilidades en desarrollo de software y experiencia en
-                    infraestructura
-                    de redes, busco crear aplicaciones robustas y funcionales que se adapten a las necesidades
-                    específicas
-                    de
-                    cada proyecto. Estoy comprometido con la calidad, la innovación y la mejora continua, siempre
-                    enfocado
-                    en
-                    superar las expectativas y contribuir al éxito de quienes confían en mis servicios.
-                </p>
-    </div>
-    <div id=" footer-container">
-        <!--El footer se cargara aqui-->
-    </div>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
