modificacion profesional de la hoja de vida2

--- a/portafolio.html
+++ b/portafolio.html
@@ -776,7 +776,7 @@
             <div class="footer-bottom">
                 <div class="row align-items-center">
                     <div class="col-md-6 text-center text-md-start">
-                        <p class="mb-0">&copy; 2025 elver Beltrán. Todos los derechos reservados.</p>
+                        <p class="mb-0">&copy; 2025 Jelver Beltrán. Todos los derechos reservados.</p>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <a href="#" class="text-light me-3 text-decoration-none">Política de Privacidad</a>
