actualizacion de la pagina web

--- a/Index.html
+++ b/Index.html
@@ -172,7 +172,7 @@
                     <h5>Jelver Beltrán</h5>
                     <p class="text-light">Desarrollador Web Full Stack especializado en crear experiencias digitales excepcionales con tecnologías modernas.</p>
                     <div class="social-links mt-3">
-                        <a href="https://www.linkedin.com/in/jelver-beltran" class="text-white"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/feed/" class="text-white"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://github.com/jebeltran5" class="text-white"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
