--- a/PaginaPrincipal.html
+++ b/PaginaPrincipal.html
@@ -468,15 +468,15 @@
                     <h4 class="mb-4">Jelver Beltrán</h4>
                     <p>Desarrollador Full Stack especializado en crear soluciones tecnológicas innovadoras y eficientes.</p>
                     <div class="social-links mt-4">
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/jelver-beltran"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://github.com/jebeltran5"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
                 
                 <div class="col-lg-4 mb-4">
                     <h4 class="mb-4">Contacto</h4>
                     <p><i class="fas fa-envelope me-2"></i>
-                        <a href="mailto:jelverfon@putlook.es" class="text-align">jelverfon@putlook.es</a>
+                        <a href="mailto:jelverfon@putlook.es" class="text-align">jelverfon@outlook.es</a>
                     </p>
                     <p><i class="fas fa-phone me-2"></i>+57 302 848 0651</p>
                     <p><i class="fas fa-map-marker-alt me-2"></i>Bogotá, Colombia</p>
