--- a/portafolio.html
+++ b/portafolio.html
@@ -693,7 +693,7 @@
                             <i class="fas fa-envelope"></i>
                         </div>
                         <h4>Email</h4>
-                        <p>jelver@ejemplo.com</p>
+                        <p>jelverfon@outlook.es</p>
                     </div>
                 </div>
                 
@@ -703,7 +703,7 @@
                             <i class="fas fa-phone"></i>
                         </div>
                         <h4>Teléfono</h4>
-                        <p>+57 300 123 4567</p>
+                        <p>+57 302 848 0651</p>
                     </div>
                 </div>
                 
@@ -728,12 +728,6 @@
                     </a>
                     <a href="#" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
-                    </a>
-                    <a href="#" target="_blank">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="#" target="_blank">
-                        <i class="fab fa-instagram"></i>
                     </a>
                 </div>
             </div>
