--- a/queRealizo.html
+++ b/queRealizo.html
@@ -558,8 +558,8 @@
                     <h4 class="footer-title">Jelver Beltrán</h4>
                     <p>Desarrollador Full Stack especializado en crear soluciones tecnológicas innovadoras y eficientes para empresas y emprendimientos.</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/jelver-beltran"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://github.com/jebeltran5"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
                 
