nuevo actualizacion de estudios

--- a/PaginaPrincipal.html
+++ b/PaginaPrincipal.html
@@ -292,6 +292,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#apcionales">Otros Estudios o cursos</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -410,7 +413,31 @@
                         </div>
                     </div>
                 </section>
-                
+                <!-- Additional Studies or Courses -->
+                <section id="apcionales" class="mb-5">
+                    <h3>Otros Estudios o Cursos</h3>
+
+                    <div class="card card-custom mb-3">
+                        <div class="card-body p-4">
+                            <h5 class="card-title">Introducción a la Programación SQL Básico</h5>
+                            <div class="timeline-data m-2">CICCE - 2021</div>
+                        </div>
+                    </div>
+
+                    <div class="card card-custom mb-3">
+                        <div class="card-body p-4">
+                            <h5 class="card-title">Modelamiento de datos y analitica</h5>
+                            <div class="timeline-data mb-2">CET Colsubsidio Educación Tecnológica - 2025</div>
+                        </div>
+                    </div>
+
+                    <div class="card card-custom">
+                        <div class="card-body p-4">
+                            <h5 class="card-title">Programación Nivel Básico</h5>
+                            <div>TIC El ministerio de tecnologia de la información y las comunicaciones (bootcamp) - 2025</div>
+                        </div>
+                    </div>
+                </section>
                 <!-- Skills -->
                 <section id="habilidades" class="mb-5">
                     <h3 class="section-title">Habilidades Técnicas</h3>
