--- a/portafolio.html
+++ b/portafolio.html
@@ -726,7 +726,7 @@
                     <a href="https://github.com/jebeltran5" target="_blank">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                 </div>
